update text in about me

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </p>
                     <p>
                         I am also planning to take a React.js course to learn the one of the most <br>
-                        in-demand modern and latest approach in front-end web development.
+                        in-demand and modern approach in front-end web development.
                     </p>
                 </div>
             </div>
